hide scenario dropdown

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div id="ctrlRotateTextBox"></div>
 
         <!-- UI: Dropdown to select scenario -->
-        <select id="scenarioDropdown">
+        <select id="scenarioDropdown" style="display:none;">
             <option value="lockdown" selected></option>
             <option value="daynight"> </option>
             <option value="workday"></option>
